--- a/file.ipynb
+++ b/file.ipynb
@@ -335,6 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# generate the iniquiry for asking google gemini\n",
     "def generateQuery(email):\n",
     "    message = \"email subject : \" + email['subject'] + \", email body: \" + email['body'] + \"\\n I want to categorize this email into either Sales, Partnership, Personal or Inquiry \\n and I want to get a summary for that email \\n I want the response in the format Category: <category in one word> \\n Summary: <summary> \\n Recommendation: <Recommended Action> \\n if its meant as a job recommendation from linked in categorize it as Personal\"\n",
     "    return message"
@@ -383,6 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# exracts the category, summary, and the recommendation from the AI response \n",
     "def extract_category_and_summary(msg):\n",
     "    data = msg.split(\"Summary: \")\n",
     "    summary_recommendation = data[1].split(\"Recommendation: \")\n",
@@ -411,6 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# a dict to save processed emails\n",
     "email_id_status = {}"
    ]
   },
@@ -425,13 +428,12 @@
     "    {\"name\": \"Jane Smith\", \"title\": \"CTO\", \"email\": \"ammar123yasserals@gmail.com\", \"manages\": \"Inquiry\"},\n",
     "    {\"name\": \"Edard Stark\", \"title\": \"Sales Manager\", \"email\": \"ammarelsayed.game@gmail.com\", \"manages\": \"Sales\"},\n",
     "    {\"name\": \"Tywin lannister\", \"title\": \"me\", \"email\": \"ammarelsayed.game@gmail.com\", \"manages\": \"Personal\"},\n",
-    "    # Add more contacts here\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -533,28 +535,56 @@
    "source": [
     "from datetime import datetime, timezone\n",
     "\n",
+    "# Get the current time in UTC timezone\n",
     "currentTime = datetime.now(timezone.utc)\n",
     "\n",
-    "#main loop\n",
-    "#currentTime = datetime.now()\n",
+    "# Main loop to continuously check and process emails\n",
     "while True:\n",
+    "    # Print the start of a new loop iteration with the current time\n",
     "    print(\"new loop at \", datetime.now())\n",
+    "    \n",
+    "    # Retrieve the list of emails using the provided credentials\n",
     "    emails = list_emails(creds)\n",
+    "    \n",
+    "    # Iterate through each email in the list\n",
     "    for email in emails:\n",
+    "        # Check if the email has not been processed yet\n",
     "        if(email_id_status.get(email[\"email_id\"], False) == False):\n",
+    "            # Mark the email as processed\n",
     "            email_id_status[email[\"email_id\"]] = True\n",
+    "            \n",
     "            try:\n",
+    "                # Define the date format used in the email's date field\n",
     "                date_format = '%a, %d %b %Y %H:%M:%S %z'\n",
+    "                \n",
+    "                # Parse the email's date string into a datetime object\n",
     "                parsed_date = datetime.strptime(email['date'], date_format)\n",
+    "                \n",
+    "                # Convert the parsed date to UTC timezone\n",
     "                parsed_date = parsed_date.astimezone(timezone.utc)\n",
-    "                if(parsed_date> currentTime):\n",
+    "                \n",
+    "                # Check if the email's date is after the current time\n",
+    "                if(parsed_date > currentTime):\n",
+    "                    # Process the email\n",
     "                    print(\"process email\")\n",
     "                    print(\"email: \", email)\n",
+    "                    \n",
+    "                    # Mark the email as processed\n",
     "                    email_id_status[email[\"email_id\"]] = True\n",
+    "                    \n",
+    "                    # Generate a query based on the email content\n",
     "                    query = generateQuery(email)\n",
+    "                    \n",
+    "                    # Get a response from the AI model based on the query\n",
     "                    AI_response = model.generate_content(query)\n",
+    "                    \n",
+    "                    # Extract category, summary, and recommendation from the AI response\n",
     "                    category, summary, recommendation = extract_category_and_summary(AI_response.text)\n",
+    "                    \n",
+    "                    # Print the category of the email\n",
     "                    print(\"category: \", category)\n",
+    "                    \n",
+    "                    # Forward the email based on its category\n",
     "                    if(\"Partnership\" in category):\n",
     "                        forward_email(contacts[0][\"email\"], email, category, summary, recommendation)\n",
     "                    elif(\"Inquiry\" in category):\n",
@@ -564,13 +594,14 @@
     "                    elif(\"Personal\" in category):\n",
     "                        forward_email(contacts[3][\"email\"], email, category, summary, recommendation)\n",
     "                    else:    \n",
+    "                        # Handle unexpected categories\n",
     "                        print(\"ERROR! summary outside summary values, category = \", category)\n",
+    "                    \n",
+    "                    # Print a separator for readability\n",
     "                    print(\"-\" * 50)\n",
     "            except Exception as e:\n",
-    "                print(\"An error occurred:\", str(e))\n",
-    "\n",
-    "        \n",
-    "            "
+    "                # Handle any exceptions that occur during processing\n",
+    "                print(\"An error occurred:\", str(e))"
    ]
   }
  ],
